Created Slightly Dynamic Landing pages

--- a/app/views/landing_pages/about.html.erb
+++ b/app/views/landing_pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>LandingPages#about</h1>
-<p>Find me in app/views/landing_pages/about.html.erb</p>
+<% provide(:title, 'About Us') %>
+
+<h1>About Us</h1>
+
+<p>CarServIt is </p>
