--- a/app/views/landing_pages/contact.html.erb
+++ b/app/views/landing_pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>LandingPages#contact</h1>
-<p>Find me in app/views/landing_pages/contact.html.erb</p>
+<% provide(:title, 'Contact Us') %>
+
+<h1>Contact Us</h1>
+
+<p>Contact Us @ </p>
