--- a/app/views/landing_pages/help.html.erb
+++ b/app/views/landing_pages/help.html.erb
@@ -1,2 +1,5 @@
-<h1>LandingPages#help</h1>
-<p>Find me in app/views/landing_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+
+<h1>Help</h1>
+
+<p>Get Help at <p>
