--- a/app/views/landing_pages/home.html.erb
+++ b/app/views/landing_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>LandingPages#home</h1>
-<p>Find me in app/views/landing_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+<h1>CarServIt</h1>
+
+<p> </p>
+
