Bootstrapped The Views

--- a/app/views/landing_pages/home.html.erb
+++ b/app/views/landing_pages/home.html.erb
@@ -1,6 +1,12 @@
-<% provide(:title, 'Home') %>
-
-<h1>CarServIt</h1>
-
-<p> </p>
-
+<div class="center jumbotron main_header font_col">
+  
+    <h1>Welcome to CarServIt!</h1>
+    <p></p>
+    
+    <h2>YOUR WORKSHOP RESERVATION MANAGER</h2>
+    
+    <%= link_to "Sign up now!", "#", class: "btn btn-lg btn-primary" %>
+    
+    <p></p>
+    <p></p>
+</div>
