--- a/app/views/landing_pages/home.html.erb
+++ b/app/views/landing_pages/home.html.erb
@@ -5,7 +5,7 @@
     
     <h2>YOUR WORKSHOP RESERVATION MANAGER</h2>
     
-    <%= link_to "Sign up now!", "#", class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
     
     <p></p>
     <p></p>
