Complete Unsuccessful Sign Up and Testing

--- a/app/views/workshops/new.html.erb
+++ b/app/views/workshops/new.html.erb
@@ -1,2 +1,33 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@workshop) do |f| %>
+    	<%= render 'shared/error_messages' %>
+
+      <%= f.label :com_reg_num, "Company Registration Number" %>
+      <%= f.text_field :com_reg_num, :maxlength => "20", class: 'form-control' %>
+
+      <%= f.label :name, "Workshop Name" %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+
+      <%= f.label :contact, "Contact Number" %>
+      <%= f.phone_field :contact, :maxlength => "11", class: 'form-control' %>
+
+      <%= f.label :address %>
+      <%= f.text_area :address, :size => "30x10", class: 'form-control' %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
